# scikit-extensions

./: .gitignore  LICENSE  Makefile  README.md  build.py  pyproject.toml
skext/: __init__.py  linear_model.py  multicolinerity.py  multilabels.py
tests/: conftest.py  test_linear_model.py  test_multicolinerity.py  test_multilabels.py
