[tool.poetry]
name = "scikit-extensions"
version = "0.1.1"
description = "A collection of Scikit-learn-compatible transformers for feature engineering, preprocessing, and pipeline utilities."
authors = ["sh99 <shriramh99@gmail.com>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "skext" }]
homepage = "https://github.com/your-username/scikit-extensions"
repository = "https://github.com/your-username/scikit-extensions"
keywords = ["scikit-learn", "transformers", "preprocessing", "pipeline"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
scikit-learn = "^1.7.2"
pandas = "^2.3.2"
statsmodels = "^0.14.5"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^4.1.0"
black = "^23.0"
ruff = "^0.1.0"
mypy = "^1.7"

[build-system]
requires = [
    "poetry-core",
    "pytest",
    "pytest-cov"
]
build-backend = "poetry.core.masonry.api"
build-hooks = ["build.py:build_hook"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=skext --cov-report=term-missing"
testpaths = [
    "tests",
]

[tool.coverage.run]
source = ["skext"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
fail_under = 80
